<resources>
    <string name="app_name">today</string>
    <string name="share_note">… as .today</string>
    <string name="settings">app settings</string>
    <string name="delete_note">delete lecture</string>
    <string name="app_bar_note">Note</string>
    <string name="open_editor">Editor</string>
    <string name="open_course_content">Open Course Content</string>
    <string name="hint_headline">Enter a Headline</string>
    <string name="hint_note" />

    <string name="action_add_attachment">Add Attachment</string>
    <string name="action_attachments">Attachments</string>
    <string name="action_take_photo">Take Photo</string>
    <string name="action_highlight">Highlight</string>
    <string name="action_colour">Colour</string>
    <string name="action_style">Style</string>

    <string name="error_message">something went wrong</string>

    <string name="tab">Tab</string>
    <string name="bullet_list">Bullet List</string>
    <string name="number_list">Number List</string>

    <string name="bold">Bold</string>
    <string name="underlined">Underlined</string>
    <string name="italic">Italic</string>

    <string name="fontcolour_yellow">Yellow</string>
    <string name="fontocolour_orange">Orange</string>
    <string name="fontcolour_red">Red</string>
    <string name="fontcolour_purple">Purple</string>
    <string name="fontcolour_blue">Blue</string>
    <string name="fontcolour_green">Green</string>

    <string name="background_font_colour_yellow">Yellow</string>
    <string name="background_font_colour_green">Green</string>
    <string name="background_font_colour_blue">Blue</string>
    <string name="background_font_colour_purple">Purple</string>
    <string name="background_font_colour_red">Red</string>

    <string name="semester">Semester</string>
    <string name="add_course">Add course</string>
    <string name="date_format">yyyy.MM.dd-HH:mm:ss</string>
    <string name="add_task">Add task</string>
    <string name="task_item_title">Example task</string>
    <string name="open_course_tasks">Open Tasks</string>
    <string name="open_today">Today</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_lecture">Add lecture</string>
    <string name="add_section">Add section</string>
    <string name="enter_task">enter task</string>
    <string name="open_pdf">open note as .pdf</string>
    <string name="delete_lecture">delete lecture</string>
    <string name="share">share note…</string>
    <string name="share_pdf">… as .pdf</string>
</resources>
