<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/colour_yellow"
        app:iconTint="@color/textcolour_yellow"
        android:icon="@drawable/baseline_lens_24"
        android:title="@string/fontcolour_yellow" />
    <item
        android:id="@+id/colour_orange"
        app:iconTint="@color/textcolour_orange"
        android:icon="@drawable/baseline_lens_24"
        android:title="@string/fontocolour_orange" />
    <item
        android:id="@+id/colour_red"
        app:iconTint="@color/textcolour_red"
        android:icon="@drawable/baseline_lens_24"
        android:title="@string/fontcolour_red" />
    <item
        android:id="@+id/colour_purple"
        app:iconTint="@color/textcolour_purple"
        android:icon="@drawable/baseline_lens_24"
        android:title="@string/fontcolour_purple" />
    <item
        android:id="@+id/colour_blue"
        app:iconTint="@color/textcolour_blue"
        android:icon="@drawable/baseline_lens_24"
        android:title="@string/fontcolour_blue" />
    <item
        android:id="@+id/colour_green"
        app:iconTint="@color/textcolour_green"
        android:icon="@drawable/baseline_lens_24"
        android:title="@string/fontcolour_green" />

</menu>