<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete_lecture"
        android:onClick="onDeleteLectureClicked"
        android:title="@string/delete_lecture"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_convert_to_pdf"
        android:onClick="onConvertPdfClicked"
        android:title="@string/open_pdf"
        app:showAsAction="never" />
    <item
        android:id="@+id/share_menu"
        android:title="@string/share">
        <menu>
            <item
                android:id="@+id/action_share"
                android:onClick="onShareLectureClicked"
                android:title="@string/share_note"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_share_pdf"
                android:onClick="onSharePdfClicked"
                android:title="@string/share_pdf"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>